Deleted bla bla

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
           </hgroup>
           <p>
             A five week introduction to traditional Japanese vegetarian meals,
-            teching you a selection of rice and noodle dishes. Bla Bla
+            teching you a selection of rice and noodle dishes.
           </p>
         </article>
         <article>
